--- a/style.css
+++ b/style.css
@@ -1,11 +1,20 @@
 H1 {
-    color: #ff0404;
+    color: #2e2a2a;
+    background-color: #000000;
     font-size: 200%;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
     text-align: center;
   }
   P {
-    color: #1a0038;
+    color: #2e2a2a;
+    background-color: #000000;
+    font-size: 150%;
+    padding-left: 20px;
+    font-family: "Comic Sans MS", "Comic Sans", cursive;
+  }
+  P1 {
+    color: #ff0202;
+    background-color: #000000;
     font-size: 150%;
     padding-left: 20px;
     font-family: "Comic Sans MS", "Comic Sans", cursive;
